# kelpie

./: .cursorrules  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DST_ASSESSMENT.md  README.md  VISION.md  clippy.toml  fdb.cluster  install-hooks.sh  kelpie.yaml  launch_tla_agents.scpt  launch_tla_agents.sh  launch_tla_agents_iterm.sh  letta-fdb-test-results-clean.txt  letta-fdb-test-results.txt  registry-logs.txt  run_letta_tests.sh  run_letta_tests_fdb.sh
.agentfs/: README.md  (+24 more)
adapters/sdk/python/: README.md  pyproject.toml
adapters/sdk/python/kelpie_client/: __init__.py  client.py  models.py
adapters/sdk/python/tests/: __init__.py  test_client.py  test_integration.py
crates/kelpie-cli/: Cargo.toml
crates/kelpie-cli/src/: client.rs  main.rs  repl.rs
crates/kelpie-core/: Cargo.toml
crates/kelpie-core/src/: actor.rs  config.rs  constants.rs  error.rs  http.rs  io.rs  lib.rs  metrics.rs  occ.rs  runtime.rs  telemetry.rs  teleport.rs
crates/kelpie-dst/: Cargo.toml  build.rs
crates/kelpie-dst/src/: agent.rs  clock.rs  fault.rs  http.rs  invariants.rs  lib.rs  liveness.rs  llm.rs  network.rs  rng.rs  sandbox.rs  sandbox_io.rs  simulation.rs  storage.rs  teleport.rs  time.rs  transport.rs  vm.rs
crates/kelpie-dst/tests/: actor_lifecycle_dst.rs  agent_integration_dst.rs  bug_hunting_dst.rs  cluster_dst.rs  cluster_membership_dst.rs  cluster_membership_production_dst.rs  cluster_partition_dst.rs  cluster_production_dst.rs  deterministic_scheduling_dst.rs  fdb_faults_dst.rs  fdb_transaction_dst.rs  firecracker_snapshot_metadata_dst.rs  integration_chaos_dst.rs  lease_dst.rs  libkrun_dst.rs  libkrun_sandbox_dst.rs  linearizability_dst.rs  liveness_dst.rs  madsim_poc.rs  memory_dst.rs  partition_tolerance_dst.rs  proper_dst_demo.rs  sandbox_dst.rs  simstorage_transaction_dst.rs  single_activation_dst.rs  single_activation_production_dst.rs  snapshot_types_dst.rs  teleport_service_dst.rs  tools_dst.rs  vm_backend_firecracker_chaos.rs  vm_backend_firecracker_dst.rs  vm_exec_dst.rs  vm_teleport_dst.rs  wal_production_dst.rs  wal_stress_dst.rs  wasm_custom_tool_dst.rs
crates/kelpie-libkrun/: Cargo.toml  DEPRECATION_NOTICE.md  README.md
crates/kelpie-libkrun/src/: config.rs  error.rs  ffi.rs  lib.rs  mock.rs  snapshot.rs  traits.rs  virtio_fs.rs
crates/kelpie-memory/: Cargo.toml
crates/kelpie-memory/src/: block.rs  checkpoint.rs  core.rs  embedder.rs  error.rs  lib.rs  search.rs  types.rs  working.rs
crates/kelpie-registry/: Cargo.toml
crates/kelpie-registry/src/: cluster.rs  cluster_storage.rs  cluster_testable.rs  cluster_types.rs  error.rs  fdb.rs  heartbeat.rs  lease.rs  lib.rs  membership.rs  node.rs  placement.rs  registry.rs
crates/kelpie-runtime/: Cargo.toml
crates/kelpie-runtime/src/: activation.rs  dispatcher.rs  handle.rs  lib.rs  mailbox.rs  runtime.rs
crates/kelpie-sandbox/: Cargo.toml
crates/kelpie-sandbox/src/: config.rs  error.rs  exec.rs  firecracker.rs  io.rs  lib.rs  libkrun.rs  mock.rs  pool.rs  process.rs  snapshot.rs  traits.rs
crates/kelpie-sandbox/tests/: sandbox_isolation_probe.rs
crates/kelpie-server/: Cargo.toml
crates/kelpie-server/src/: http.rs  invariants.rs  lib.rs  llm.rs  main.rs  models.rs  state.rs
crates/kelpie-server/src/actor/: agent_actor.rs  dispatcher_adapter.rs  llm_trait.rs  mod.rs  registry_actor.rs  state.rs
crates/kelpie-server/src/api/: agent_groups.rs  agents.rs  archival.rs  blocks.rs  groups.rs  idempotency.rs  identities.rs  import_export.rs  mcp_servers.rs  messages.rs  mod.rs  projects.rs  scheduling.rs  standalone_blocks.rs  streaming.rs  summarization.rs  teleport.rs  tools.rs
crates/kelpie-server/src/interface/: mod.rs  telegram.rs
crates/kelpie-server/src/memory/: mod.rs  umi_backend.rs
crates/kelpie-server/src/security/: audit.rs  auth.rs  mod.rs
crates/kelpie-server/tests/: agent_actor_dst.rs  agent_deactivation_timing.rs  agent_loop_dst.rs  agent_loop_types_dst.rs  agent_message_handling_dst.rs  agent_service_dst.rs  agent_service_fault_injection.rs  agent_service_send_message_full_dst.rs  agent_streaming_dst.rs  agent_types_dst.rs  appstate_integration_dst.rs  audit_logging_integration.rs  custom_tool_integration.rs  delete_atomicity_test.rs  fdb_persistence_test.rs  fdb_storage_dst.rs  full_lifecycle_dst.rs  heartbeat_dst.rs  heartbeat_integration_dst.rs  heartbeat_real_dst.rs  http_api_dst.rs  letta_full_compat_dst.rs  letta_pagination_test.rs  letta_tool_call_format_test.rs  llm_token_streaming_dst.rs  mcp_integration_dst.rs  mcp_integration_test.rs  mcp_servers_dst.rs  memory_tools_dst.rs  memory_tools_real_dst.rs  memory_tools_simulation.rs  multi_agent_dst.rs  real_adapter_comprehensive_faults_dst.rs  real_adapter_dst.rs  real_adapter_http_dst.rs  real_adapter_simhttp_dst.rs  real_llm_adapter_streaming_dst.rs  real_llm_integration.rs  registry_actor_dst.rs  runtime_pilot_test.rs  (+5 more)
crates/kelpie-storage/: Cargo.toml
crates/kelpie-storage/src/: fdb.rs  kv.rs  lib.rs  memory.rs  transaction.rs  wal.rs
crates/kelpie-tools/: Cargo.toml
crates/kelpie-tools/examples/: mcp_client.rs  mcp_test_server.py
crates/kelpie-tools/src/: error.rs  http_client.rs  http_tool.rs  lib.rs  mcp.rs  registry.rs  sim.rs  traits.rs
crates/kelpie-vm/: Cargo.toml  build.rs
crates/kelpie-vm/src/: backend.rs  config.rs  error.rs  lib.rs  mock.rs  snapshot.rs  traits.rs  virtio_fs.rs  vm_images.rs
crates/kelpie-wasm/: Cargo.toml
crates/kelpie-wasm/src/: lib.rs  runtime.rs
images/guest-agent/: Cargo.toml
images/guest-agent/src/: main.rs  protocol.rs
tools/kelpie-indexer/: Cargo.toml
tools/kelpie-indexer/src/: main.rs
tools/kelpie-indexer/tests/: consistency_tests.rs  indexer_tests.rs
tools/mcp-kelpie-python/: README.md  pyproject.toml
tools/mcp-kelpie-python/mcp_kelpie/: server.py
tools/mcp-kelpie-python/tests/: test_indexer.py  test_rlm.py  test_tools.py
tools/rlm-env/: .gitignore  README.md  pyproject.toml
tools/rlm-env/rlm_env/: __init__.py  __main__.py  codebase.py  environment.py  types.py
tools/rlm-env/tests/: test_codebase.py  test_environment.py
(+609 files in other folders)
