[workspace]
resolver = "2"
members = [
    "crates/kelpie-core",
    "crates/kelpie-runtime",
    "crates/kelpie-registry",
    "crates/kelpie-storage",
    "crates/kelpie-memory",
    "crates/kelpie-sandbox",
    "crates/kelpie-tools",
    "crates/kelpie-wasm",
    "crates/kelpie-cluster",
    "crates/kelpie-dst",
    "crates/kelpie-vm",
    "crates/kelpie-server",
    "crates/kelpie-cli",
]
exclude = [
    "images/guest-agent",  # Built inside Docker, not part of main workspace
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/nerdsane/kelpie"
authors = ["nerdsane"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bytes = { version = "1.5", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Synchronization primitives
once_cell = "1.19"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.14"
tracing-opentelemetry = "0.22"
prometheus = "0.13"

# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# System utilities
hostname = "0.4"

# Time - pin to 0.4.38 for Umi compatibility (arrow-arith conflict)
chrono = { version = "=0.4.38", features = ["serde"] }

# Cron scheduling
croner = "2"

# Hashing and checksums
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "normalize-path"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }

# Streaming
tokio-stream = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# WASM runtime
wasmtime = "16"
wasmtime-wasi = "16"

# FoundationDB (optional, feature-gated)
foundationdb = { version = "0.10", features = ["fdb-7_3"] }

# Formal verification
stateright = "0.30"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# Embeddings (optional)
fastembed = "5.4"

# Internal crates
kelpie-core = { path = "crates/kelpie-core" }
kelpie-runtime = { path = "crates/kelpie-runtime" }
kelpie-registry = { path = "crates/kelpie-registry" }
kelpie-storage = { path = "crates/kelpie-storage" }
kelpie-server = { path = "crates/kelpie-server" }
kelpie-wasm = { path = "crates/kelpie-wasm" }
kelpie-cluster = { path = "crates/kelpie-cluster" }
kelpie-dst = { path = "crates/kelpie-dst" }
kelpie-memory = { path = "crates/kelpie-memory" }
kelpie-sandbox = { path = "crates/kelpie-sandbox" }
kelpie-tools = { path = "crates/kelpie-tools" }
kelpie-vm = { path = "crates/kelpie-vm" }

# External memory library
umi-memory = { git = "https://github.com/rita-aga/umi", package = "umi-memory" }

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
