[package]
name = "kelpie-core"
description = "Core types, errors, and constants for Kelpie virtual actor system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }

# OpenTelemetry (optional, enabled with "otel" feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-prometheus = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

# Madsim (optional, enabled with "madsim" feature for deterministic testing)
madsim = { version = "0.2", optional = true }

[features]
default = []
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "opentelemetry-prometheus", "prometheus", "tracing-opentelemetry", "tracing-subscriber", "once_cell"]
madsim = ["dep:madsim"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[dev-dependencies]
proptest = { workspace = true }
