[package]
name = "kelpie-dst"
description = "Deterministic Simulation Testing framework for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kelpie-core = { workspace = true }
kelpie-storage = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
kelpie-memory = { workspace = true }
kelpie-runtime = { workspace = true }
kelpie-sandbox = { workspace = true }
bytes = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
stateright = { workspace = true }
tracing-subscriber = { workspace = true }
