[package]
name = "kelpie-dst"
description = "Deterministic Simulation Testing framework for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
madsim = ["dep:madsim"]
firecracker = ["kelpie-vm/firecracker"]

[dependencies]
kelpie-core = { workspace = true }
kelpie-storage = { workspace = true }
kelpie-sandbox = { workspace = true }
kelpie-vm = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

# Madsim (optional, enabled with "madsim" feature for deterministic testing)
madsim = { version = "0.2", optional = true }

[dev-dependencies]
kelpie-cluster = { workspace = true }
kelpie-memory = { workspace = true }
kelpie-registry = { workspace = true }
kelpie-runtime = { workspace = true }
kelpie-sandbox = { workspace = true }
kelpie-tools = { workspace = true }
bytes = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stateright = { workspace = true }
tracing-subscriber = { workspace = true }
madsim = "0.2"
