[package]
name = "kelpie-libkrun"
description = "Safe Rust bindings for libkrun microVM library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

# NOTE: libkrun feature is NOT YET FUNCTIONAL
# The FFI implementation contains only architectural scaffolding.
# Enabling this feature will fail to compile (requires libkrun + libclang installed).
# Use the default (MockVm) for testing until implementation is complete.
#
# To implement:
# 1. Install: brew install libkrun llvm
# 2. Complete FFI calls in src/ffi.rs (12+ TODOs)
# 3. Implement guest agent protocol
# 4. Test with: cargo test -p kelpie-dst --test libkrun_dst --features libkrun
libkrun = ["dep:krun-sys"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Optional: Only needed when libkrun feature is enabled
krun-sys = { version = "1.10", optional = true }

[dev-dependencies]
tokio = { workspace = true }
