[package]
name = "kelpie-libkrun"
description = "Safe Rust bindings for libkrun microVM library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

# libkrun feature: TESTING & VALIDATION ONLY ⚠️
#
# This feature is NOT recommended for production use.
#
# STATUS: Core lifecycle (create/configure/boot/stop/cleanup) is COMPLETE.
# NOT SUPPORTED: exec (needs guest agent), snapshot/restore (no libkrun API).
#
# For production VM management with snapshot/restore:
# - macOS: Use Apple Virtualization.framework (native snapshot API)
# - Linux: Use Firecracker (production-proven snapshot/restore)
#
# System requirements (if testing libkrun FFI):
# - macOS: Build libkrun from source + LLVM (`brew install llvm`)
# - Linux: libkrun development packages
#
# To build with libkrun:
# 1. Install libkrun: https://github.com/containers/libkrun
# 2. Install LLVM: brew install llvm (macOS) or system package (Linux)
# 3. cargo build -p kelpie-libkrun --features libkrun
#
# Note: Will fail if libkrun.pc is not found by pkg-config.
# Use MockVm (default) for most testing - no system dependencies needed.
libkrun = ["dep:krun-sys"]
# TEMPORARILY DISABLED: cyclic dependency with kelpie-firecracker
# firecracker = ["dep:kelpie-firecracker"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# TEMPORARILY DISABLED: cyclic dependency
# kelpie-firecracker = { workspace = true, optional = true }

# Optional: Only needed when libkrun feature is enabled
krun-sys = { version = "1.10", optional = true }

[dev-dependencies]
tokio = { workspace = true }
