[package]
name = "kelpie-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hierarchical memory system for Kelpie agents"

[dependencies]
kelpie-core = { workspace = true }
kelpie-storage = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
