[package]
name = "kelpie-registry"
description = "Actor placement and discovery for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
fdb = ["dep:foundationdb"]

[dependencies]
kelpie-core = { workspace = true }
kelpie-storage = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hostname = { workspace = true }
foundationdb = { workspace = true, optional = true }

[dev-dependencies]
kelpie-dst = { workspace = true }
proptest = { workspace = true }
