[package]
name = "kelpie-runtime"
description = "Actor runtime and dispatcher for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kelpie-core = { workspace = true }
kelpie-storage = { workspace = true }
kelpie-registry = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
kelpie-dst = { workspace = true }
proptest = { workspace = true }
