[package]
name = "kelpie-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sandbox execution environment for Kelpie agents"

[features]
default = []
# Enable Firecracker VM support (Linux only)
firecracker = []

[dependencies]
kelpie-core = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
