[package]
name = "kelpie-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sandbox execution environment for Kelpie agents"

[features]
default = []
# Enable Firecracker VM support (Linux only)
firecracker = []
# Enable libkrun VM support (macOS HVF + Linux KVM)
libkrun = ["dep:kelpie-libkrun"]

[dependencies]
kelpie-core = { workspace = true }
kelpie-libkrun = { workspace = true, optional = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# Checksums (for libkrun snapshot verification)
crc32fast = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
