[package]
name = "kelpie-server"
description = "Standalone Kelpie server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core kelpie crates
kelpie-sandbox = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for LLM APIs
reqwest = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
