[package]
name = "kelpie-server"
description = "Standalone Kelpie server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
otel = ["kelpie-core/otel", "prometheus"]

[dependencies]
# Core kelpie crates
kelpie-core = { workspace = true }
kelpie-sandbox = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for LLM APIs
reqwest = { workspace = true }

# Streaming for SSE
tokio-stream = { workspace = true }
futures = { workspace = true }

# Memory backend (Umi)
umi-memory = { workspace = true }

# Metrics (optional, with otel feature)
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
kelpie-dst = { workspace = true }
anyhow = { workspace = true }
tokio-test = "0.4"
