[package]
name = "kelpie-storage"
description = "Per-actor KV storage for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kelpie-core = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
kelpie-dst = { workspace = true }
proptest = { workspace = true }
