[package]
name = "kelpie-storage"
description = "Per-actor KV storage for Kelpie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Note: FDB is NOT default because it requires FoundationDB client libraries at compile time.
# Enable explicitly with --features fdb when FDB is installed.
default = []
fdb = ["foundationdb"]

[dependencies]
kelpie-core = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional: FoundationDB backend
foundationdb = { workspace = true, optional = true }

[dev-dependencies]
kelpie-dst = { workspace = true }
proptest = { workspace = true }
