[package]
name = "kelpie-tools"
description = "Tool integration layer for Kelpie agents (MCP support)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# MCP server support (spawn external MCP servers)
mcp-server = []
# DST (Deterministic Simulation Testing) support
dst = ["kelpie-dst"]

[dependencies]
kelpie-core = { workspace = true }
kelpie-sandbox = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client for HTTP/SSE transports
reqwest = { workspace = true }

# Eventsource for SSE
reqwest-eventsource = "0.6"

# Optional DST support
kelpie-dst = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
