[package]
name = "kelpie-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "kelpie-indexer"
path = "src/main.rs"
